--- a/index.html
+++ b/index.html
@@ -1,47 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Results summary component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-  Your Result
-  76
-  of 100
-
-  Great
-  You scored higher than 65% of the people who have taken these tests.
-  
-  Summary
-
-  Reaction
-  80 / 100
-
-  Memory
-  92 / 100
-
-  Verbal
-  61 / 100
-
-  Visual
-  72 / 100
-
-  Continue
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <!-- Link Styles -->
+    <link href="/dist/styles.css" rel="stylesheet">
+    <!-- Icon -->
+    <link type="image/png" href="./assets/images/favicon-32x32.png" rel="icon" sizes="32x32">
+    <!-- Title Page -->
+    <title>Frontend Mentor | Results summary component</title>
+  </head>
+  <body>
+    <!-- Start Main -->
+    <main id="main">
+      <!-- Start Card -->
+      <div class="card">
+        <!-- Start Card Results -->
+        <div class="card__results">
+          <!-- Card Results Title -->
+          <h1 class="card__title card__title--result">Your Result</h1>
+          <!-- Card Results Score -->
+          <p class="card__results-score">76<span>of 100</span></p>
+          <!-- Card Results Description -->
+          <div class="card__results-description">
+            <!-- Card Results Description Title-->
+            <p class="card__results-description--title">Great</p>
+            <p class="card__results-description--text">
+              You scored higher than 65% of the people who have taken these
+              tests.
+            </p>
+          </div>
+        </div>
+        <!-- End Card Results -->
+        <!-- Start Card Summary -->
+        <div class="card__summary">
+          <!-- Card Summary Title -->
+          <h2 class="card__title card__title--summary">Summary</h2>
+          <div class="card__summary-grid">
+            <!-- Start Card Summary Item - Reaction -->
+            <div class="card__summary-item card__summary-item--reaction">
+              <!-- Card Summary Item-Flex -->
+              <div class="card__summary-item-flex">
+                <!-- Card Summary Icon -->
+                <svg class="icon icon--reaction" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                  <path d="M10.833 8.333V2.5l-6.666 9.167h5V17.5l6.666-9.167h-5Z"></path>
+                </svg>
+                <!-- Card Summary Title -->
+                <h3 class="card__summary-title">Reaction</h3>
+              </div>
+              <!-- Card Summary Score -->
+              <p class="card__summary-score">80 <span>/ 100</span></p>
+            </div>
+            <!-- End Card Summary Item - Reaction -->
+            <!-- Start Card Summary Item - Memory -->
+            <div class="card__summary-item card__summary-item--memory">
+              <!-- Card Summary Item-Flex -->
+              <div class="card__summary-item-flex">
+                <!-- Card Summary Icon -->
+                <svg class="icon icon--memory" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                  <path d="M5.833 11.667a2.5 2.5 0 1 0 .834 4.858"></path>
+                  <path d="M3.553 13.004a3.333 3.333 0 0 1-.728-5.53m.025-.067a2.083 2.083 0 0 1 2.983-2.824m.199.054A2.083 2.083 0 1 1 10 3.75v12.917a1.667 1.667 0 0 1-3.333 0M10 5.833a2.5 2.5 0 0 0 2.5 2.5m1.667 3.334a2.5 2.5 0 1 1-.834 4.858"></path>
+                  <path d="M16.447 13.004a3.334 3.334 0 0 0 .728-5.53m-.025-.067a2.083 2.083 0 0 0-2.983-2.824M10 3.75a2.085 2.085 0 0 1 2.538-2.033 2.084 2.084 0 0 1 1.43 2.92m-.635 12.03a1.667 1.667 0 0 1-3.333 0"></path>
+                </svg>
+                <!-- Card Summary Title -->
+                <h3 class="card__summary-title">Memory</h3>
+              </div>
+              <!-- Card Summary Score -->
+              <p class="card__summary-score">92 <span>/ 100</span></p>
+            </div>
+            <!-- End Card Summary Item - Memory -->
+            <!-- Start Card Summary Item - Verbal -->
+            <div class="card__summary-item card__summary-item--verbal">
+              <!-- Card Summary Item-Flex -->
+              <div class="card__summary-item-flex">
+                <!-- Card Summary Icon -->
+                <svg class="icon icon--verbal" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                  <path d="M7.5 10h5M10 18.333A8.333 8.333 0 1 0 1.667 10c0 1.518.406 2.942 1.115 4.167l-.699 3.75 3.75-.699A8.295 8.295 0 0 0 10 18.333Z"></path>
+                </svg>
+                <!-- Card Summary Title -->
+                <h3 class="card__summary-title">Verbal</h3>
+              </div>
+              <!-- Card Summary Score -->
+              <p class="card__summary-score">61 <span>/ 100</span></p>
+            </div>
+            <!-- End Card Summary Item - Verbal -->
+            <!-- Start Card Summary Item - Visual -->
+            <div class="card__summary-item card__summary-item--visual">
+              <!-- Card Summary Item-Flex -->
+              <div class="card__summary-item-flex">
+                <!-- Card Summary Icon -->
+                <svg class="icon icon--visual" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                  <path d="M10 11.667a1.667 1.667 0 1 0 0-3.334 1.667 1.667 0 0 0 0 3.334Z"></path>
+                  <path d="M17.5 10c-1.574 2.492-4.402 5-7.5 5s-5.926-2.508-7.5-5C4.416 7.632 6.66 5 10 5s5.584 2.632 7.5 5Z"></path>
+                </svg>
+                <!-- Card Summary Title -->
+                <h3 class="card__summary-title">Visual</h3>
+              </div>
+              <!-- Card Summary Score -->
+              <p class="card__summary-score">72 <span>/ 100</span></p>
+            </div>
+            <!-- End Card Summary Item - Visual -->
+          </div>
+          <!-- Card Summary Button -->
+          <button class="button" type="button">Continue</button>
+        </div>
+        <!-- End Card Summary -->
+      </div>
+      <div class="main__attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io/challenges/results-summary-component-CE_K6s0maV" rel="noopener" target="_blank">Frontend Mentor</a>. Coded by
+        <a href="https://www.frontendmentor.io/profile/Barcaca" rel="noopener" target="_blank">Luan Barcaça</a>.
+      </div>
+    </main>
+    <!-- End Main -->
+  </body>
 </html>
