UPDATE tag card__results and card__summary to tag section. UPDATE add transition onhover

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <!-- Start Card -->
       <div class="card">
         <!-- Start Card Results -->
-        <div class="card__results">
+        <section class="card__results">
           <!-- Card Results Title -->
           <h1 class="card__title card__title--result">Your Result</h1>
           <!-- Card Results Score -->
@@ -32,10 +32,10 @@
               tests.
             </p>
           </div>
-        </div>
+        </section>
         <!-- End Card Results -->
         <!-- Start Card Summary -->
-        <div class="card__summary">
+        <section class="card__summary">
           <!-- Card Summary Title -->
           <h2 class="card__title card__title--summary">Summary</h2>
           <div class="card__summary-grid">
@@ -105,7 +105,7 @@
           </div>
           <!-- Card Summary Button -->
           <button class="button" type="button">Continue</button>
-        </div>
+        </section>
         <!-- End Card Summary -->
       </div>
       <div class="main__attribution">
